[gd_scene load_steps=6 format=3 uid="uid://erpib4e2t3nq"]

[ext_resource type="Script" path="res://scenes/detection/detection.gd" id="1_gdy46"]
[ext_resource type="Texture2D" uid="uid://bgmvxapkmm3rf" path="res://scenes/images/loading.png" id="2_raavu"]
[ext_resource type="Texture2D" uid="uid://di8liy4lcrnu" path="res://scenes/images/home.svg" id="3_kb4xg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lf1gv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2x1fl"]

[node name="Detection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdy46")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavPanelContainer" type="VBoxContainer" parent="bg/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="home_button" type="Button" parent="bg/HBoxContainer/NavPanelContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
icon = ExtResource("3_kb4xg")
flat = true
expand_icon = true

[node name="searchAgainButton" type="Button" parent="bg/HBoxContainer/NavPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Recherche"

[node name="VSeparator" type="VSeparator" parent="bg/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_lf1gv")

[node name="VBoxContainer" type="VBoxContainer" parent="bg/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="RichTextLabel" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.760784, 0.839216, 0.976471, 0.627451)
theme_override_font_sizes/normal_font_size = 60
text = "MetaCAM : d√©tection"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="line_HSeparator" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="spacer_title_det_results" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_2x1fl")

[node name="GridContainer" type="GridContainer" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="ImageTextureRect" type="TextureRect" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_raavu")

[node name="ErrorSuccessLabel" type="Label" parent="bg/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "..."

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="bg/HBoxContainer/NavPanelContainer/home_button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="bg/HBoxContainer/NavPanelContainer/searchAgainButton" to="." method="_on_search_again_button_pressed"]
